kubernetes/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zabbix-server
  name: zabbix-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  strategy: {}
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
      - image: zabbix/zabbix-server-mysql:5.4-ubuntu-latest
        name: zabbix-server
        ports:
        - containerPort: 10051
        resources:
         limits:
           cpu: 400m
           memory: 1024Mi
         requests:
           cpu: 100m
           memory: 100Mi
status: {}
