kubernetes/ingress-zbx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-zbx 
  namespace: zabbix-web
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: zabbix-web
      port:
        number: 80
